--- a/regexp/style.css
+++ b/regexp/style.css
@@ -1,19 +1,28 @@
 .input-wrap{
   border: 1px solid #b6b6b6;
-  height: 32px;
-  width: 500px;
+  width: 50%;
+  min-width: 500px;
   position: relative;
   overflow: hidden;
 }
 
 #input{
-  width: 100%;
+  min-height: 200px;
+  width: 99%;
   padding: 0px;
-  height: 22px;
   border: 0;
-  position: absolute;
   margin: 6px 0px 0px 7px;
   outline: none; 
   font-size: 16px;
   resize : none;
+  font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', 'Droid Sans Mono', 'Consolas', monospace;
+}
+
+#history{
+  min-height: 200px;
+  width: 50%;
+  padding: 0px;
+  font-size: 16px;
+  resize : none;
+  font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', 'Droid Sans Mono', 'Consolas', monospace;
 }
