--- a/regexp/style.css
+++ b/regexp/style.css
@@ -1,13 +1,38 @@
-.input-wrap{
-  border: 1px solid #b6b6b6;
+body {
+  background: rgb(107, 102, 89);
+}
+
+input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
+  color: #6b6659;
+}
+input:-moz-placeholder, textarea:-moz-placeholder {
+  color: #6b6659;
+}
+input::-moz-placeholder, textarea::-moz-placeholder {
+  color: #6b6659;
+}
+input:-ms-input-placeholder, textarea:-ms-input-placeholder {
+  color: #6b6659;
+}
+
+#content {
+  margin: 0px auto;
   width: 50%;
+}
+
+.input-wrap {
+  background: white;
+  border: 1px solid #b6b6b6;
+  width: 100%;
   min-width: 500px;
   position: relative;
   overflow: hidden;
 }
 
-#input{
-  min-height: 200px;
+#input {
+  background-color: white;
+  letter-spacing: 1.5px;
+  min-height: 180px;
   width: 99%;
   padding: 0px;
   border: 0;
@@ -18,11 +43,46 @@
   font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', 'Droid Sans Mono', 'Consolas', monospace;
 }
 
-#history{
-  min-height: 200px;
-  width: 50%;
+#history {
+  background-color: #cbcbba;
+  margin-top: 20px;
+  border: 1px solid #b6b6b6;
+  min-height: 300px;
+  width: 100%;
   padding: 0px;
   font-size: 16px;
   resize : none;
   font-family: 'Monaco', 'Menlo', 'Ubuntu Mono', 'Droid Sans Mono', 'Consolas', monospace;
+}
+
+.history-box {
+  letter-spacing: 1.5px;
+  margin: 4px;
+}
+
+.box-title {
+  line-height: 26px;
+  padding-left: 5px; 
+  border-bottom: 1px solid #dddddd;
+}
+
+.box-content {
+  background-color: #DDDDDD;
+  line-height: 26px;
+  padding-left: 5px; 
+  border-bottom: 2px solid #ccc;
+  padding: 4px;
+}
+
+.title {
+  padding: 20px 2px 0px;
+  font-family: Bangers, cursive;
+  font-size: 36px;
+  text-align:center;
+  margin: 0px auto 10px;
+  width: 50%;
+  height: 80px;
+  background-color: #bada55;
+  background-image: -webkit-linear-gradient(top,#bada55,#8ca440);
+  background-image: linear-gradient(to bottom,#bada55,#8ca440);
 }
