--- a/regexp/style.css
+++ b/regexp/style.css
@@ -5,12 +5,15 @@ body {
 input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
   color: #6b6659;
 }
+
 input:-moz-placeholder, textarea:-moz-placeholder {
   color: #6b6659;
 }
+
 input::-moz-placeholder, textarea::-moz-placeholder {
   color: #6b6659;
 }
+
 input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   color: #6b6659;
 }
@@ -21,6 +24,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
 }
 
 .input-wrap {
+  margin-top: 4px;
   background: white;
   border: 1px solid #b6b6b6;
   width: 100%;
@@ -45,9 +49,8 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
 
 #history {
   background-color: #cbcbba;
-  margin-top: 20px;
+  margin-top: 5px;
   border: 1px solid #b6b6b6;
-  min-height: 300px;
   width: 100%;
   padding: 0px;
   font-size: 16px;
@@ -61,17 +64,34 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
 }
 
 .box-title {
+  position: relative;
   line-height: 26px;
-  padding-left: 5px; 
-  border-bottom: 1px solid #dddddd;
+  padding-left: 20px; 
+}
+
+.box-title:before
+{
+  content:"> ";
+  color: #DC143C;
+  display: block;
+  position: absolute;
+  left: 5px;
 }
 
 .box-content {
-  background-color: #DDDDDD;
+  background-color: #dddddd;
   line-height: 26px;
-  padding-left: 5px; 
-  border-bottom: 2px solid #ccc;
-  padding: 4px;
+  padding-left: 20px; 
+  position: relative;
+}
+
+.box-content:before
+{
+  content:"< ";
+  color: #DC143C;
+  display: block;
+  position: absolute;
+  left: 5px;
 }
 
 .title {
@@ -79,7 +99,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   font-family: Bangers, cursive;
   font-size: 36px;
   text-align:center;
-  margin: 0px auto 10px;
+  margin: 0px auto;
   width: 50%;
   height: 80px;
   background-color: #bada55;
